fix invisible borders after zoom out

--- a/app/assets/stylesheets/admin/dashboard.scss
+++ b/app/assets/stylesheets/admin/dashboard.scss
@@ -32,12 +32,16 @@
         background: $pink_gradient;
         border-radius: pxtovw(20);
       }
+      .plan-border {
+        // margin: 2px auto;
+        border: thin solid #713980;
+        border-radius: pxtovw(21);
+      }
       .card {
         padding-left: pxtovw($padding-x);
         padding-right: pxtovw($padding-x);
-        margin: 2px auto;
-        /* border: medium solid #713980; //4px */
-        border: 2px solid $pink2;
+        margin: 0px;
+        border: thin solid #713980;
         border-radius: pxtovw(20);
         &:hover {
           cursor: unset;
